[package]
name = "datetime-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
rustc_version_runtime = "0.3.0"
separator = "0.4.1"

[profile.release]
debug = 1               # To enable release build profiling
