[package]
name = "hyper-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["http1", "http2", "server", "tcp"] }
tokio = { version = "1.33.0", features = ["sync", "macros", "rt-multi-thread"] }
